# rustic_smet_scraper

./: Cargo.toml  session.json
src/: main.rs
src/appending_cookies/: mod.rs
src/chirch_client/: mod.rs
src/gpt_chirch_client/: mod.rs
src/response_handling/: mod.rs
src/response_logging/: mod.rs
src/session/: mod.rs
src/session/session_data/: mod.rs
src/string_extraction/: mod.rs
src/unicode_decoding/: mod.rs
