[package]
name = "rustic_smet_scraper"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3.30"
reqwest = { version = "0.12.5", features = ["blocking", "rustls-tls", "json", "native-tls-vendored"]}
rustls = "0.23.12"
serde = { version = "1.0.204", features = ["derive"]}
tokio = { version = "1.39.2", features = ["full"] }


